# StoryToVideo

./: README.md
client/: CMakeLists.txt  README.md
client/StoryToVideoGenerator/: AssetsPage.qml  CreatePage.qml  PreviewPage.qml  README.md  ShotDetailPage.qml  StoryToVideoGenerator.pro  StoryboardPage.qml  ViewModel.h  main.cpp  main.qml  networkmanager.cpp  networkmanager.h  qml.qrc  viewmodel.cpp
client/qml/: Main.qml
client/src/: main.cpp
docs/: API_DRAFT.md  ARCHITECTURE.md  MILESTONES.md  PRD.md
frp/: frpc.ini.sample  frps.ini.sample
model/: .dockerignore  Dockerfile  README.md  docker-compose.gpu.yml  main.py  requirements.txt
server/: README.md
server/fastapi_stub/: main.py
